nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: myapp
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
