secret-deploy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      name: app-pod
  template:
    metadata:
      labels:
        name: app-pod
    spec:
      containers:
        - name: container-name
          image: nginx

          # Remember that the limits and requests are set for each container (pod could have multi container)
          # By default, kubernetes assumes that a POD or a container
          # within a POD requires .5 CPU & 256 Mebibyte of memory. we can change
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            # BY default Kubernetes sets a limit of 1vCPU to containers. So if you do not specify
            # explicitly, a container will be limited to consume only 1 vCPU from the Node limit of 512 Mebibyte on
            # containers..
            limits:
              memory: "2Gi"
              cpu: "1000m"

          ports:
            - containerPort: 8080
              imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  # By default will be clusterIp
  type: NodePort
  ports:
    - targetPort: 80
      # Port on service object (mandatory)
      port: 80
      nodePort: 30008
  selector:
    # Should be match with the the label of template in deployment
    name: app-pod

---
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: NodePort
  ports:
    # Container port
    - targetPort: 80
      # Port on service object (mandatory)
      port: 80
      # Not neccessary
      nodePort: 30008
  selector:
    # should be match with the template of container in deployment
    name: app-pod
