ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  labels:
    name: my-ingress
spec:
  rules:
    - host:
      http:
        paths:
          - pathType: Prefix
            path: "/wear"
            backend:
              service:
                name: wear-service
                port:
                  number: 80
          - pathType: Prefix
            path: "/pay"
            backend:
              service:
                name: payment-service
                port:
                  number: 80
